# solana-ua-bootcamp-2025-03

practice-1/: generate_prefix_key.ts
practice-2/: create_multisig_token.ts  practice_2_11.ts  trans_payer_recipient.ts
practice-2/rust_code/: Cargo.toml
practice-4/practice_4_1/favorites/programs/favorites/src/: lib.rs
practice-4/practice_4_1/favorites/tests/: favorites.test.ts
practice-4/practice_4_2/favorites/: Anchor.toml
practice-4/practice_4_2/favorites/programs/favorites/src/: lib.rs
practice-4/practice_4_2/favorites/tests/: favorites.test.ts
practice-4/practice_4_3/escrow/: Anchor.toml
practice-4/practice_4_3/escrow/programs/escrow/src/: lib.rs
practice-4/practice_4_3/escrow/programs/escrow/src/instructions/: cancel_offer.rs  mod.rs
practice-4/practice_4_3/escrow/tests/: escrow.test.ts
