[package]
name = "practice_2"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
mpl-token-metadata = "5.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
spl-associated-token-account = "6.0.0"
spl-token = "8.0.0"

